--- a/boletines/Assests/css/main.css
+++ b/boletines/Assests/css/main.css
@@ -49,7 +49,12 @@ html{
     box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.16), 0 5px 10px 3px rgba(0, 0, 0, 0.23);
     border-radius: 4px;
     position: relative;
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
     overflow: scroll;
+    
     
 }
 .content{
